[project]
name = "relayx"
version = "0.1.0"
description = "A flexible SOCKS5 proxy relay service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp-socks>=0.10.1",
    "mitmproxy>=11.1.3",
    "pyyaml>=6.0",
    "rnet>=2.0.0",
    "swiftshadow>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "black",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
swiftshadow = { git = "https://github.com/lance0805/swiftshadow" }

[project.scripts]
relayx = "relayx.main:main"
